View More link in quick-links and enclosure layout issue

--- a/web/studio/css/main.css
+++ b/web/studio/css/main.css
@@ -1993,3 +1993,11 @@ ebx-reorder .fa:first-child {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.quick-links li.ql-view-more:before {
+    background: #FFFFFF;
+}
+
+.ql-view-more a {
+	text-decoration: none;
+}
